# deep-dive-into-aigc-001

./: README.md
framework/: CMakeLists.txt
framework/include/: common.hpp  memory.hpp  normalization.hpp  op.hpp  syncmem.hpp  tensor.hpp
framework/lib/: common.cpp  memory.cpp  op.cu  syncmem.cpp
framework/src/: main.cpp  py.cpp  test.py  test.sh
framework/third_part/pybind11/: tags
performance/elementwise/: CMakeLists.txt  dev_3080Ti  perf.md
performance/elementwise/include/: elementwise.hpp
performance/elementwise/kernel/: elementwise.cu
performance/elementwise/src/: main.cpp  py.cpp
performance/gemm_experiments/: CMakeLists.txt
performance/gemm_experiments/include/: common.hpp  log.hpp  matmul_gpu_bank_conflict.hpp  memory.hpp  timer.hpp
performance/gemm_experiments/kernel/: matmul_gpu_bank_conflict.cu
performance/gemm_experiments/lib/: log.cpp  memory.cpp  timer.cpp
performance/gemm_experiments/ncu-test/: .~lock.gemm.csv#  .~lock.select_metrices_median.csv#  extract_info.py  gemm_b16.csv  gemm_b32.csv  profile  select_cols.txt  select_metrices_median_b16.csv  select_metrices_median_b32.csv
performance/gemm_experiments/src/: main.cpp
performance/transformer/: trans.py
performance/transformer/pytorch_version/: perf.py  transformer.py
